--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,24 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <header>
+    <div class="col-xs-6">
+      <div class="square">
+        <br />
+        This is my 
+        <br />
+        quiz 1 app!
+        <br />
+      </div>
+    </div>
+  </header>
+  <h1>
+    <br />
+    <br />
+    <br />
+    <br />
+    This is the body of my application.  
+  </h1>
 <%= yield %>
 
 </body>
